[patch.crates-io]
frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-benchmarking-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-executive = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-collective = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-democracy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-elections-phragmen = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-identity = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-im-online = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-membership = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-multisig = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-offences = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-randomness-collective-flip = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-scheduler = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-sudo = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-utility = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-basic-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-chain-spec = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-client-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-slots = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-executor = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-informant = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-network = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-service = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-telemetry = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-application-crypto = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-arithmetic = { path = "vendor/sp-arithmetic" }
sp-block-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-blockchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-core = { path = "vendor/sp-core" }
sp-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-inherents = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-io = { path = "vendor/sp-io" }
sp-keystore = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-offchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-npos-elections = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime-interface = { path = "vendor/runtime-interface" }
sp-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-std = { path = "vendor/std" }
sp-storage = { path = "vendor/storage" }
sp-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-trie = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-version = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-mmr-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-maybe-compressed-blob = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
mmr-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-prometheus-endpoint = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-preimage = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
try-runtime-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }

pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }

#jsonrpc-core = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
#jsonrpc-ws-server = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }
#jsonrpc-server-utils = { git = "https://github.com/soramitsu/jsonrpc.git", branch = "new_fragment_capacity" }

# fixed-hash = { git = "https://github.com/vmarkushin/parity-common.git", branch = "no-std" }

# The latest versions of thread_local (1.1.2) had a memory leak. This version doesn't have it.
thread_local = { git = "https://github.com/sora-xor/thread_local-rs.git", branch = "patch-1.0.1" }

# impl-trait-for-tuples = { git = "https://github.com/sora-xor/impl-trait-for-tuples.git", branch = "sora-v1.6.0" }

#parity-util-mem = { git = "https://github.com/paritytech/parity-common.git" }

#orml-currencies = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }
#orml-traits = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }
#orml-tokens = { git = "https://github.com/KalitaAlexey/open-runtime-module-library.git", branch = "use-master" }

[patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
orml-tokens = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38" }
orml-traits = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38" }
orml-currencies = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38" }
orml-utilities = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38" }
orml-xtokens = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38" }

[patch."https://github.com/paritytech/substrate.git"]
frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-benchmarking-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-executive = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-election-provider-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-collective = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-democracy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-elections-phragmen = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-identity = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-im-online = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-membership = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-multisig = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-offences = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-randomness-collective-flip = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-scheduler = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-sudo = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-utility = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-bags-list = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-election-provider-multi-phase = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-basic-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-chain-spec = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-client-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-slots = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-executor = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-informant = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-network = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-service = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-telemetry = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-application-crypto = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-arithmetic = { path = "vendor/sp-arithmetic" }
sp-block-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-blockchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-core = { path = "vendor/sp-core" }
sp-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-inherents = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-io = { path = "vendor/sp-io" }
sp-keystore = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-offchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-npos-elections = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime-interface = { path = "vendor/runtime-interface" }
sp-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-std = { path = "vendor/std" }
sp-storage = { path = "vendor/storage" }
sp-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-trie = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-version = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-mmr-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-maybe-compressed-blob = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
mmr-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-prometheus-endpoint = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-preimage = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
try-runtime-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }

pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }

[patch."https://github.com/sora-xor/substrate.git"]
sp-arithmetic = { path = "vendor/sp-arithmetic" }
sp-debug-derive = { path = "vendor/debug-derive" }
sp-core = { path = "vendor/sp-core" }
sp-externalities = { path = "vendor/externalities" }
sp-io = { path = "vendor/sp-io" }
sp-runtime-interface = { path = "vendor/runtime-interface" }
sp-serializer = { path = "vendor/serializer" }
sp-std = { path = "vendor/std" }
sp-storage = { path = "vendor/storage" }
sp-tracing = { path = "vendor/tracing" }
sp-wasm-interface = { path = "vendor/wasm-interface" }

# [patch."https://github.com/sora-xor/sora2-common.git"]
# beefy-light-client = { path = "../sora2-common/pallets/beefy-light-client" }
# beefy-light-client-rpc = { path = "../sora2-common/pallets/beefy-light-client/rpc" }
# beefy-light-client-runtime-api = { path = "../sora2-common/pallets/beefy-light-client/runtime-api" }
# leaf-provider = { path = "../sora2-common/pallets/leaf-provider" }
# leaf-provider-rpc = { path = "../sora2-common/pallets/leaf-provider/rpc" }
# leaf-provider-runtime-api = { path = "../sora2-common/pallets/leaf-provider/runtime-api" }
# bridge-common = { path = "../sora2-common/pallets/bridge-common" }
# dispatch = { path = "../sora2-common/pallets/dispatch" }
# parachain-bridge-app = { path = "../sora2-common/pallets/parachain-app" }
# substrate-bridge-app = { path = "../sora2-common/pallets/substrate-app" }
# substrate-bridge-channel = { path = "../sora2-common/pallets/substrate-channel" }
# bridge-types = { path = "../sora2-common/pallets/types" }
# bridge-data-signer = { path = "../sora2-common/pallets/data-signer" }
# multisig-verifier = { path = "../sora2-common/pallets/multisig-verifier" }
# evm-fungible-app = { path = "../sora2-common/pallets/evm-fungible-app" }
# bridge-channel = { path = "../sora2-common/pallets/channel" }

[patch."https://github.com/sora-xor/sora2-common.git"]
bridge-types = { path = "vendor/bridge-types" }
bridge-data-signer = { path = "vendor/bridge-data-signer" }
evm-fungible-app = { path = "vendor/evm-fungible-app" }
jetton-app = { path = "vendor/jetton-app" }

[workspace]
members = [
    "runtime",
    "common",
    "pallets/apollo-platform",
    "pallets/assets",
    "pallets/ceres-governance-platform",
    "pallets/ceres-liquidity-locker",
    "pallets/demeter-farming-platform",
    "pallets/permissions",
    "pallets/trading-pair",
    "pallets/dex-manager",
    "pallets/dex-api",
    "pallets/farming",
    "pallets/ceres-staking",
    "pallets/ceres-token-locker",
    "pallets/faucet",
    "pallets/hermes-governance-platform",
    "pallets/iroha-migration",
    "pallets/liquidity-proxy",
    "pallets/mock-liquidity-source",
    "pallets/soratopia",
    "pallets/technical",
    "pallets/pool-xyk",
    "pallets/presto",
    "pallets/rewards",
    "pallets/xor-fee",
    "pallets/referrals",
    "pallets/eth-bridge",
    "pallets/pswap-distribution",
    "pallets/multicollateral-bonding-curve-pool",
    "pallets/vested-rewards",
    "pallets/xst",
    "pallets/price-tools",
    "pallets/oracle-proxy",
    "pallets/order-book",
    "pallets/bridge-proxy",
    "pallets/bridge-proxy/rpc",
    "pallets/bridge-proxy/runtime-api",
    "pallets/kensetsu",
    "pallets/band",
    "pallets/qa-tools",
    "pallets/extended-assets",
    "pallets/denomination",
    "node/",
    "utils/parse",
    "utils/generate-bags",
    "utils/remote-ext",
]

resolver = "2"

[workspace.dependencies]
currencies = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38", package = "orml-currencies", default-features = false }
tokens = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38", package = "orml-tokens", default-features = false }
orml-tokens = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38", package = "orml-tokens", default-features = false }
traits = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38", package = "orml-traits", default-features = false }
orml-traits = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38", package = "orml-traits", default-features = false }
xtokens = { git = "https://github.com/sora-xor/open-runtime-module-library.git", branch = "polkadot-v0.9.38", package = "orml-xtokens", default-features = false }


[profile.release]
panic = 'unwind'

[patch."https://github.com/paritytech/polkadot-sdk"]
frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-benchmarking-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-executive = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-election-provider-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-collective = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-democracy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-elections-phragmen = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-identity = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-im-online = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-membership = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-multisig = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-offences = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-randomness-collective-flip = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-scheduler = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-sudo = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-utility = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-bags-list = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-election-provider-multi-phase = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-basic-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-chain-spec = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-client-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-slots = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-executor = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-informant = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-network = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-service = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-telemetry = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-application-crypto = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-arithmetic = { path = "vendor/sp-arithmetic" }
sp-block-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-blockchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-core = { path = "vendor/sp-core" }
sp-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-inherents = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-io = { path = "vendor/sp-io" }
sp-keystore = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-offchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-npos-elections = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime-interface = { path = "vendor/runtime-interface" }
sp-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-std = { path = "vendor/std" }
sp-storage = { path = "vendor/storage" }
sp-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-trie = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-version = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-mmr-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-maybe-compressed-blob = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
mmr-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-prometheus-endpoint = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-preimage = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
try-runtime-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }

pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }


[patch."https://github.com/sora-xor/polkadot-sdk.git"]
frame-benchmarking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-benchmarking-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-executive = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-system-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
frame-election-provider-support = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-balances = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-collective = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-democracy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-elections-phragmen = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-identity = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-im-online = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-membership = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-multisig = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-offences = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-randomness-collective-flip = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-scheduler = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-sudo = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-utility = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-bags-list = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-election-provider-multi-phase = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-basic-authorship = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-chain-spec = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-client-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-consensus-slots = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-executor = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-informant = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-network = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-rpc-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-service = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sc-telemetry = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-api = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-application-crypto = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-arithmetic = { path = "vendor/sp-arithmetic" }
sp-block-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-blockchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-aura = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-consensus-babe = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-core = { path = "vendor/sp-core" }
sp-finality-grandpa = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-inherents = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-io = { path = "vendor/sp-io" }
sp-keystore = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-offchain = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-npos-elections = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-runtime-interface = { path = "vendor/runtime-interface" }
sp-session = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-std = { path = "vendor/std" }
sp-storage = { path = "vendor/storage" }
sp-timestamp = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-transaction-pool = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-trie = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-version = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-keyring = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-mmr-primitives = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-maybe-compressed-blob = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-frame-rpc-system = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
mmr-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-prometheus-endpoint = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
sp-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-beefy-mmr = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-gadget-rpc = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
beefy-merkle-tree = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
pallet-preimage = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
substrate-wasm-builder = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
try-runtime-cli = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }

pallet-staking = { git = "https://github.com/sora-xor/substrate.git", branch = "polkadotsdk-v1.1.0" }
